[package]
name = "svg-server"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6.2"
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.1", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
anyhow = "1.0.86"
askama = "0.12.1"
askama_axum = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
usvg = "0.27.0"
resvg = "0.27.0"
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
clomonitor-apiserver = { path = "../clomonitor-apiserver" }
clomonitor-core = { path = "../clomonitor-core" }

